<?xml version="1.0"?>
<package>
  <name>asdinterface</name>
  <version>0.1.0</version>
  <description>

     asdinterface

  </description>
  <maintainer email="infantinoalex@gmail.com">Alexander Infantino</maintainer>
  <author>Alexander Infantino</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>nao_msgs</build_depend>
  <run_depend>nao_msgs</run_depend>
  <build_depend>std_srvs</build_depend>
  <run_depend>std_srvs</run_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>image_transport</build_depend>
  <run_depend>image_transport</run_depend>
  <build_depend>attention-tracker</build_depend>
  <run_depend>attention-tracker</run_depend>

  <export>
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib"/>
  </export>



 
</package>
